--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,11 +1,28 @@
-* {
-    all: unset;
+
+
+a {
+    cursor: pointer;
+}
+a:hover {
+    text-decoration: underline;
 }
 
-/* Thanks to L. David Baron for this: https://twitter.com/davidbaron/status/794138427952222210 */
-base, basefont, datalist, head, meta, script, style, title,
-noembed, param, template {
-    display: none;
+
+body {
+    font-color: #1d1d1d;
+    font-family: 'Roboto', sans-serif;
+}
+
+/* Global Styles
+   ========================================================================== */
+.wrapper {
+    max-width: 1250px;
+    margin: 0 auto;
+    display:block;
+}
+
+h1 {
+    font-size: 200%;
 }
 
 h2 {
@@ -13,14 +30,74 @@ h2 {
     display: block;
 }
 
+/* Header
+   ========================================================================== */
+header {
+    background-color: #1d1d1d;
+    color:#fff;
+    line-height: 50px;
+}
+
+#header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+header h1 {
+    margin: 0;
+}
+
+/* Medium screens */
+@media all and (max-width: 800px) {
+  nav ul {
+    /* When on medium sized screens, we center it by evenly distributing empty space around items */
+    justify-content: space-around;
+  }
+}
+
+/* Small screens */
+@media all and (max-width: 500px) {
+  nav ul {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
+}
+
+nav {
+
+}
+
 nav ul {
-    margin:0; 
+    margin:0 0 0 20px; 
     padding:0;
 }
 nav ul li {
     display:inline; 
     margin:5px;
 }
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    line-height: 50px;
+    display: inline-block;
+    width: 100px;
+}
+nav ul li a:hover {
+    font-weight: bold;
+}
+
+
+footer {
+    background-color: #1d1d1d;
+    color:#fff;
+    line-height: 50px;
+    display: block;
+}
+
+
+
 
 #posts {
     display: flex;
@@ -28,27 +105,27 @@ nav ul li {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: stretch;
-    max-width: 1250px;
-    background-color: #eee;
-    margin: 0 auto;
 }
 
 section {
     flex-basis: 33%;
     min-width: 300px;
     flex-grow: 2;
-    padding: 20px;
+    padding: 10px;
     box-sizing: border-box;
 }
 
 section:first-child {
-    background-color: #ccc;
     flex-basis: 66%;
     flex-grow:2;
 }
 
-section:last-child {
-    background-color: #ccc;
-    flex-basis: 33%;
-    flex-grow:0;
+article {
+    display: block;
+    padding: 10px;
+}
+
+
+p {
+    line-height: 150%;
 }
