--- a/templates/index.html
+++ b/templates/index.html
@@ -13,22 +13,15 @@
 <body>
     <header>
         <div class="wrapper">
-            <div id="header">
-                <h1>test</h1>
-                <nav>
-                  <ul>
-                      <li><a href="#">LINK 1</a></li>
-                      <li><a href="#">LINK 2</a></li>
-                      <li><a href="#">LINK 3</a></li>
-                      <li><a href="#">LINK 1</a></li>
-                      <li><a href="#">LINK 2</a></li>
-                      <li><a href="#">LINK 3</a></li>
-                      <li><a href="#">LINK 1</a></li>
-                      <li><a href="#">LINK 2</a></li>
-                      <li><a href="#">LINK 3</a></li>
-                  </ul>
-                </nav>
-            </div>
+            <nav>
+                <ul class="twitter" role="navigation">
+                    <li><a href="#1">middle</a></li>
+                    <li><a href="#2">middle</a></li>
+                    <li><a href="#3">middle</a></li>
+                    <li class="nav_right"><form action="http://google.com"><input placeholder="search"/></form></li>
+                    <li><button>Search</button></li>
+                </ul>
+            </nav>
         </div>
     </header>
     
