--- a/templates/archive.twig
+++ b/templates/archive.twig
@@ -1,9 +1,15 @@
-{% if posts|length > 0 %}
-<ul>
-{% for post in posts %}
-    <li>{{ post.metadata.timestamp|date('d/m/Y') }} - <a href="pages/{{ post.metadata.slug }}">{{ post.metadata.title }}</a></li>
-{% endfor %}
-</ul>
-{% endif %}
+{% extends "base.twig" %}
+{% block title %}Archive{% endblock %}
 
-
+{% block content %}
+    <section id="archive" class="wrapper">
+        <h1>Archive</h1>
+        {% if posts|length > 0 %}
+        <ul>
+        {% for post in posts %}
+            <li><span class="date">{{ post.metadata.timestamp|date('M j, Y') }}</span> <a href="{{ BASE_URL }}/pages/{{ post.metadata.slug }}">{{ post.metadata.title }}</a></li>
+        {% endfor %}
+        </ul>
+        {% endif %}
+    </section>
+{% endblock %}
