--- a/templates/post.twig
+++ b/templates/post.twig
@@ -1,3 +1,9 @@
-<h1>{{ meta["title"] }}</h1>
-{{ content|raw }}
-<hr>
+{% extends "base.twig" %}
+{% block title %}{{ meta["title"] }}{% endblock %}
+
+{% block content %}
+    <section id="singlePost" class="wrapper">
+        <h1>{{ meta["title"] }}</h1>
+        {{ content|raw }}
+    </section>
+{% endblock %}
