fixed issue where sticky footer would not stay at end of page on scroll

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -29,6 +29,7 @@
     
     {% block content %}{% endblock %}
     
+    <div id="footerMargin"></div>
     <footer>
         <div class="wrapper">
             <p>Powered by <a href="https://github.com/sachleen/Steady">Steady</a></p>
